--- a/projeto 1/contatos.html
+++ b/projeto 1/contatos.html
@@ -33,37 +33,33 @@
         <a href="contatos.html">Contatos</a>
     </nav>
 
-    <!--Quem Somos-->
-    <section class="container-quem-somos">
-        <article class="servico">
-            <img src="assets/images/icon_ai.png" class="icone" alt="icone" alt="Inteligência Artificial">
-            <p class="servico-texto">
-                Somos expecialistas em <span class="servico-texto-realce">Inteligência Artificial</span><br>
-                Trabalhamos para encontrar soluções tecnologicamente inteligentes para todas as áreas impresariais.
-            </p>
+    <!--Contatos-->
+    
+    <section class="container-contatos">
+
+        <h1 class="text-center">Contacte-nos</h1>
+        <h3 class="text-center">Estamos desponíveis 24/7 para o esclarecer</h3>
+
+        <article class="text-center">
+            <img src="assets/images/icon_phone.png" alt="telefone">
+            <a href="tel:351912345678" class="contatos">351 912 345 678</a>
+            <small>Entre às 09:ooh e às 19:00h</small>
         </article>
 
-        <article class="servico">
-            <img src="assets/images/icon_lab.png" class="icone" alt="icone" alt="Laboratório moderno">
-            <p class="servico-texto">
-                Os nosssos Laboratório são os mais modernos da atualidade.
-            </p>
+        <article class="text-center margin-top-40">
+            <img src="assets/images/icon_email.png" alt="email">
+            <a href="malito:inteligencia.artificial@ai.com" class="contatos">inteligencia.artificial@ai.com</a>
+            <small>Respondemos a todos os emails no prazo de 12 horas.</small>
         </article>
 
-        <article class="servico">
-            <img src="assets/images/icon_computer.png" class="icone" alt="icone" alt="Programadores experientes">
-            <p class="servico-texto">
-                Os nossos colaboradores são os técnicos mais experientes do mercado.
-            </p>
-        </article>
     </section>
 
     <!--Ver serviços ou contatos-->
 
     <section class="container-servico-contatos">
-        <h1>Obtenha mais informações na área de serviços e contacte-nos.</h1>
+        <h1>Conheça os nossos serviços.</h1>
+        
         <div class="botoes-servico-contatos">
-            <a href="servicos.html">Ver serviços</a>
             <a href="contatos.html">Contatos</a>
         </div>
     </section>
