--- a/projeto 1/servicos.html
+++ b/projeto 1/servicos.html
@@ -33,29 +33,31 @@
         <a href="contatos.html">Contatos</a>
     </nav>
 
-    <!--Quem Somos-->
-    <section class="container-quem-somos">
-        <article class="servico">
-            <img src="assets/images/icon_ai.png" class="icone" alt="icone" alt="Inteligência Artificial">
-            <p class="servico-texto">
-                Somos expecialistas em <span class="servico-texto-realce">Inteligência Artificial</span><br>
-                Trabalhamos para encontrar soluções tecnologicamente inteligentes para todas as áreas impresariais.
-            </p>
+    <!--Serviços-->
+    
+    <section class="container-servicos">
+
+        <h1 class="text-center">Os nossos serviços</h1>
+
+        <article>
+            <h3>Soluções inovadoras para a sua impresa.</h3>
+            <ul>
+                <li>Desenhamos novas soluções para aumento de produtividade.</li>
+                <li>Aumentamos a performance dos colaboradores.</li>
+                <li>Incremento garantido de 20% nos lucros da empresa</li>
+            </ul>
         </article>
 
-        <article class="servico">
-            <img src="assets/images/icon_lab.png" class="icone" alt="icone" alt="Laboratório moderno">
-            <p class="servico-texto">
-                Os nosssos Laboratório são os mais modernos da atualidade.
-            </p>
+        <article>
+            <h3>Projetamos o futuro do seu negócio</h3>
+            <ol>
+                <li>Pensamos na melhor solução. </li>
+                <li>Desenvolvemos o produto em parceria consigo.</li>
+                <li>Aplicamos a solução na empresa.</li>
+                <li>Fazemos a monitorização do processo.</li>
+            </ol>
         </article>
 
-        <article class="servico">
-            <img src="assets/images/icon_computer.png" class="icone" alt="icone" alt="Programadores experientes">
-            <p class="servico-texto">
-                Os nossos colaboradores são os técnicos mais experientes do mercado.
-            </p>
-        </article>
     </section>
 
     <!--Ver serviços ou contatos-->
@@ -63,7 +65,6 @@
     <section class="container-servico-contatos">
         <h1>Obtenha mais informações na área de serviços e contacte-nos.</h1>
         <div class="botoes-servico-contatos">
-            <a href="servicos.html">Ver serviços</a>
             <a href="contatos.html">Contatos</a>
         </div>
     </section>
