--- a/template basico CSS3/exemplo-8/index.html
+++ b/template basico CSS3/exemplo-8/index.html
@@ -9,6 +9,8 @@
 
     <!--Folha de estilo-->
 
+    <!--fonte importada do google fonts-->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&display=swap" rel="stylesheet">
