--- a/template basico CSS3/exemplo-9/index.html
+++ b/template basico CSS3/exemplo-9/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo 9</title>
 
+    <!--duas ou mais fonts do google fonts-->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Genos:ital,wght@1,200&display=swap" rel="stylesheet">
