--- a/1°formulário/index.html
+++ b/1°formulário/index.html
@@ -23,7 +23,7 @@
     <div class="form-container">
         <form action="https://sys4soft.com/udemy/forms/index.php" method="post">
 
-            <!--testo-->
+            <!--texto-->
 
             <div class="form-group">
                 <label for="campo-usuario">Usuário:</label><br>
